# net-rs

./: .gitignore  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: build-dev.yml  build.yml
crates/http/: Cargo.toml  README.md
crates/http/examples/: get.rs  handle-func.rs  handle.rs  listen_and_serve.rs  not-found-handler.rs  serve-mux-handle.rs
crates/http/proc-macro/: Cargo.toml
crates/http/proc-macro/src/: lib.rs  tests.rs
crates/http/src/: TODO.md  client.rs  header.rs  lib.rs  method.rs  proto.rs  request.rs  response.rs  server.rs  status.rs
crates/url/: Cargo.toml
crates/url/examples/: parse_query.rs  url.rs  url_escaped_fragment.rs  url_escaped_path.rs  url_hostname.rs  url_is_abs.rs  url_parse.rs  url_port.rs  url_query.rs  url_redacted.rs  url_request_uri.rs  url_resolve_reference.rs  url_roundtrip.rs  url_string.rs  values.rs
crates/url/src/: internal.rs  lib.rs  path.rs  query.rs  user_info.rs  values.rs
examples/http/listen_and_serve/: server.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
net/: all.html  index.html  sidebar-items.js
net/url/: fn.parse.html  fn.parse_query.html  fn.parse_request_uri.html  fn.path_escape.html  fn.path_unescape.html  fn.query_escape.html  fn.query_unescape.html  fn.user.html  fn.user_password.html  index.html  sidebar-items.js  struct.URL.html  struct.UserInfo.html  struct.Values.html
net/url/errors/: enum.Error.html  fn.new_misc.html  fn.wrap.html  index.html  sidebar-items.js
net/url/path/: fn.path_escape.html  fn.path_unescape.html
net/url/query/: fn.query_escape.html  fn.query_unescape.html
net/url/url/: fn.parse.html  fn.parse_request_uri.html  struct.URL.html
net/url/user_info/: fn.user.html  fn.user_password.html  struct.UserInfo.html
net/url/values/: fn.parse_query.html  struct.Values.html
src/: lib.rs
src/http/: README.md  TODO.md  errors.rs  header.rs  mod.rs  request.rs  server.rs
src/net/: lib.rs.html
src/net/url/: errors.rs.html  internal.rs.html  mod.rs.html  path.rs.html  query.rs.html  user_info.rs.html  values.rs.html
src/url/: README.md  TODO.md  errors.rs  internal.rs  mod.rs  path.rs  query.rs  user_info.rs  values.rs
src/url/examples/: mod.rs
src/url/tests/: internal.rs  mod.rs  url.rs  values.rs
src/url/url/: mod.rs  tests.rs
(+7 files in other folders)
