[package]
name = "net"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
thiserror = "1.0.20"

[dependencies.hyper]
features = ["full"]
version = "0.14"

[dependencies.serde]
version  = "1.0.116"
features = ["derive"]

[dependencies.tokio]
features = ["full"]
version = "1"

[dev-dependencies]
serde_json = "1.0.58"

[[example]]
name = "http-listen-and-serve"
path = "examples/http/listen_and_serve/server.rs"
