[package]
name = "net"
version = "0.1.0"
authors = ["sammyne <xiangminli@alumni.sjtu.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.http]
path = "./crates/http"

[dependencies.url]
path = "./crates/url"

[[example]]
name = "http-listen-and-serve"
path = "examples/http/listen_and_serve/server.rs"

[workspace]
members = [
  "./crates/http",
  "./crates/url",
]
